--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <a href="" class="btn btn-outline-dark py-2 px-4" style="animation: slideInRight;">Contact Us</a>
             </div>
             <div class="col-lg-6">
-                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="">
+                <img class="img-fluid animated pulse infinite" src="img/main.jpg" alt="">
             </div>
         </div>
     </div>
@@ -612,6 +612,5 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
-
 
 </html>
