--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg" style="background-color: white; padding: 0;">
             <a href="index.html" class="navbar-brand">
-                <h2 style="color: #ffca1a;">Hairnic</h2>
+                <h2 style="color: #ffca1a;">SAFA'Z</h2>
             </a>
             <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon" style="background-color: #ffca1a;"></span>
@@ -87,14 +87,14 @@
                     Hair <span class="fw-light" style="color: #333;">Shampoo</span> For Healthy Hair
                 </h1>
                 <p style="color: white; margin-bottom: 1rem; animation: slideInRight;">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat rutrum lectus, sed auctor ex malesuada id. Orci varius natoque penatibus et
+                   
                     magnis dis parturient montes.
                 </p>
                 <a href="" class="btn btn-dark py-2 px-4 me-3" style="animation: slideInRight;">Shop Now</a>
                 <a href="" class="btn btn-outline-dark py-2 px-4" style="animation: slideInRight;">Contact Us</a>
             </div>
             <div class="col-lg-6">
-                <img class="img-fluid animated pulse infinite" src="img/main.jpg" alt="">
+                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="">
             </div>
         </div>
     </div>
@@ -612,5 +612,6 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
