--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg" style="background-color: white; padding: 0;">
             <a href="index.html" class="navbar-brand">
-                <h2 style="color: #ffca1a;">SAFA'Z</h2>
+                <h2 style="color: #ffca1a;">Hairnic</h2>
             </a>
-            <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <!-- Button for mobile view -->
+            <button type="button" class="navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon" style="background-color: #ffca1a;"></span>
             </button>
+            <!-- Collapsible content -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto">
                     <a href="index.html" class="nav-item nav-link active" style="color: #ffca1a;">Home</a>
@@ -75,26 +77,27 @@
         </nav>
     </div>
 </div>
+
+
 <!-- Navbar End -->
 
-   <!-- Hero Start -->
-<div class="container-fluid" style="background-color: #ffe880; margin-bottom: 5rem;">
+  <!-- Hero Start -->
+<div class="container-fluid" style="background-color: #ffe880; padding: 2rem 0;">
     <div class="container">
-        <div class="row g-5 align-items-center">
-            <div class="col-lg-6 text-center text-lg-start">
+        <div class="row align-items-center">
+            <div class="col-12 col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
                 <h3 class="fw-light" style="color: white; animation: slideInRight;">Natural & Organic</h3>
                 <h1 class="display-4" style="color: white; animation: slideInRight;">
                     Hair <span class="fw-light" style="color: #333;">Shampoo</span> For Healthy Hair
                 </h1>
                 <p style="color: white; margin-bottom: 1rem; animation: slideInRight;">
-                   
-                    magnis dis parturient montes.
+                   Magnis dis parturient montes.
                 </p>
-                <a href="" class="btn btn-dark py-2 px-4 me-3" style="animation: slideInRight;">Shop Now</a>
+                <a href="" class="btn btn-dark py-2 px-4 me-2" style="animation: slideInRight;">Shop Now</a>
                 <a href="" class="btn btn-outline-dark py-2 px-4" style="animation: slideInRight;">Contact Us</a>
             </div>
-            <div class="col-lg-6">
-                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="">
+            <div class="col-12 col-lg-6 text-center">
+                <img class="img-fluid animated pulse infinite" src="main.jpg" alt="" style="max-height: 300px; object-fit: cover;">
             </div>
         </div>
     </div>
@@ -615,3 +618,4 @@
 
 
 </html>
+
