--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
             <span class="sr-only">Loading...</span>
         </div>
     </div>
-    <!-- Spinner End -->
 
-<!-- Navbar Start -->
+    <!-- Navbar Start -->
 <div class="container-fluid sticky-top" style="background-color: white;">
     <div class="container">
         <nav class="navbar navbar-expand-lg" style="background-color: white; padding: 0;">
@@ -51,7 +50,7 @@
                 <h2 style="color: #ffca1a;">Hairnic</h2>
             </a>
             <!-- Button for mobile view -->
-            <button type="button" class="navbar-toggler ms-auto" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" style="border-color: #ffca1a;">
                 <span class="navbar-toggler-icon" style="background-color: #ffca1a;"></span>
             </button>
             <!-- Collapsible content -->
@@ -618,4 +617,5 @@
 
 
 </html>
+
 
