--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg" style="background-color: white; padding: 0;">
             <a href="index.html" class="navbar-brand">
-                <h2 style="color: #ffca1a;">Hairnic</h2>
+                <h2 style="color: #ffca1a;">SAFA'Z</h2>
             </a>
             <!-- Button for mobile view -->
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -634,6 +634,7 @@
 
 
 </html>
+
 
 
 
