--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </h1>
         
         <div class="position-relative">
-          <img class="img-fluid glowing-image" src="img/shampoo.png" alt="Shampoo" style="max-width: 300px;">
+          <img class="img-fluid glowing-image" src="main.jpg" alt="Shampoo" style="max-width: 300px;">
             <div class="row position-absolute w-100" style="top: 50%; left: 50%; transform: translate(-50%, -50%);">
                 <div class="col-4" style="position: absolute; top: -50px; left: -50px;">
                     <div class="circle">
@@ -750,3 +750,4 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
