--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </h1>
 
         <div class="position-relative">
-            <img class="img-fluid glowing-image" src="img/shampoo.png" alt="Shampoo" style="max-width: 200px;">
+            <img class="img-fluid glowing-image" src="main.jpg" alt="Shampoo" style="max-width: 200px;">
 
             <!-- Circles positioned in a circular layout around the image -->
             <div class="circle circle-1"><h5>Natural & Organic</h5></div>
@@ -730,6 +730,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
