--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             
             <!-- Central Image -->
             <img class="img-fluid glowing-image position-absolute top-50 start-50 translate-middle" 
-                 src="img/shampoo.png" alt="Shampoo" style="max-width: 150px; z-index: 10;">
+                 src="main.jpg" alt="Shampoo" style="max-width: 150px; z-index: 10;">
 
             <!-- Circles positioned using CSS rotation/translation -->
             <div class="circle circle-1" style="--i: 0;"><h5>Natural & Organic</h5></div>
@@ -758,6 +758,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
