--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 
                 <!-- Central Image -->
                 <img class="img-fluid glowing-image position-absolute top-50 start-50 translate-middle" 
-                     src="img/shampoo.png" 
+                     src="main.jpg" 
                      alt="Shampoo" 
                      style="max-width: 170px; z-index: 10;">
 
@@ -769,6 +769,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
