--- a/index.html
+++ b/index.html
@@ -246,28 +246,29 @@
 <!-- Deal End -->
 
 <!-- Feature Start -->
-<div class="container-fluid py-5">
+<div class="container-fluid py-5 overflow-hidden">
     <div class="container text-center">
-        <h1 class="mb-4" style="color: #ffe880;">
+        <h1 class="mb-5" style="color: #ffe880;">
             <span class="fw-light text-dark">Best Benefits Of Our</span> Natural Hair Shampoo
         </h1>
 
-        <!-- Bigger container so circles don’t get cut -->
-        <div class="circle-container position-relative mx-auto">
-            
-            <!-- Central Image -->
-            <img class="img-fluid glowing-image position-absolute top-50 start-50 translate-middle" 
-                 src="main.jpg" 
-                 alt="Shampoo" 
-                 style="max-width: 170px; z-index: 10;">
+        <div class="circle-wrapper">
+            <div class="circle-container">
 
-            <!-- Circles -->
-            <div class="circle" style="--i: 0;"><h5>Natural & Organic</h5></div>
-            <div class="circle" style="--i: 1;"><h5>Anti Hair Fall</h5></div>
-            <div class="circle" style="--i: 2;"><h5>Anti-dandruff</h5></div>
-            <div class="circle" style="--i: 3;"><h5>No Internal Side Effect</h5></div>
-            <div class="circle" style="--i: 4;"><h5>No Skin Irritation</h5></div>
-            <div class="circle" style="--i: 5;"><h5>No Artificial Smell</h5></div>
+                <!-- Center Image -->
+                <img src="img/shampoo.png"
+                     alt="Shampoo"
+                     class="glowing-image">
+
+                <!-- Circles -->
+                <div class="circle" style="--i:0;"><h5>Natural & Organic</h5></div>
+                <div class="circle" style="--i:1;"><h5>Anti Hair Fall</h5></div>
+                <div class="circle" style="--i:2;"><h5>Anti-dandruff</h5></div>
+                <div class="circle" style="--i:3;"><h5>No Internal Side Effect</h5></div>
+                <div class="circle" style="--i:4;"><h5>No Skin Irritation</h5></div>
+                <div class="circle" style="--i:5;"><h5>No Artificial Smell</h5></div>
+
+            </div>
         </div>
     </div>
 </div>
@@ -275,46 +276,62 @@
 <style>
 :root {
     --total-items: 6;
-    --radius: 180px;      /* Increased radius */
-    --item-size: 95px;    /* Slightly bigger circles */
+    --item-size: 95px;        /* Bigger circles */
+    --container-size: 90vw;   /* Fully responsive */
 }
 
-/* IMPORTANT: container must be radius * 2 */
-.circle-container {
-    width: 420px;
-    height: 420px;
-    position: relative;
-}
-
-/* Prevent horizontal scroll */
 body {
     overflow-x: hidden;
 }
 
+.circle-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle-container {
+    width: min(420px, var(--container-size));
+    height: min(420px, var(--container-size));
+    position: relative;
+    margin: auto;
+}
+
+/* Radius calculated automatically so nothing gets cut */
+.circle-container {
+    --radius: calc(50% - var(--item-size) / 2 - 10px);
+}
+
 .glowing-image {
-    box-shadow: 0 0 20px rgba(255, 215, 0, 0.7),
-                0 0 40px rgba(255, 215, 0, 0.4);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 38%;
+    z-index: 10;
+    box-shadow: 0 0 25px rgba(255,215,0,0.8),
+                0 0 50px rgba(255,215,0,0.4);
 }
 
 .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: var(--item-size);
+    height: var(--item-size);
+    background: #ffe880;
+    border: 4px solid #ffcc00;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ffe880;
-    border: 4px solid #ffcc00;
-    border-radius: 50%;
-    width: var(--item-size);
-    height: var(--item-size);
-    position: absolute;
-    color: white;
     text-align: center;
+    color: white;
     font-weight: bold;
 
-    top: 50%;
-    left: 50%;
-    transform: 
-        rotate(calc(360deg / var(--total-items) * var(--i))) 
-        translateX(var(--radius))
+    transform:
+        rotate(calc(360deg / var(--total-items) * var(--i)))
+        translate(calc(var(--radius) - 10px)) /* Adjusted translate left by 10px */
         rotate(calc(-360deg / var(--total-items) * var(--i)));
 }
 
@@ -324,29 +341,17 @@ h5 {
     padding: 6px;
 }
 
-/* ===== MOBILE FIX ===== */
-@media (max-width: 768px) {
+/* ===== MOBILE OPTIMIZATION ===== */
+@media (max-width: 576px) {
     :root {
-        --radius: 140px;
-        --item-size: 75px;
-    }
-
-    .circle-container {
-        width: 320px;
-        height: 320px;
+        --item-size: 80px;
     }
 
     h5 {
         font-size: 0.65rem;
     }
-
-    .glowing-image {
-        max-width: 130px !important;
-    }
 }
 </style>
-
-
    
 
    <!-- How To Use Start -->
@@ -760,6 +765,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
