--- a/index.html
+++ b/index.html
@@ -248,19 +248,21 @@
 <!-- Feature Start -->
 <div class="container-fluid py-5 overflow-hidden">
     <div class="container text-center">
-        <h1 class="mb-5" style="color: #ffe880;">
+        <h1 class="mb-4" style="color: #ffe880;">
             <span class="fw-light text-dark">Best Benefits Of Our</span> Natural Hair Shampoo
         </h1>
 
-        <div class="circle-wrapper">
-            <div class="circle-container">
+        <!-- Circle Wrapper -->
+        <div class="circle-wrapper d-flex justify-content-center align-items-center">
+            <div class="circle-container position-relative">
+                
+                <!-- Central Image -->
+                <img class="img-fluid glowing-image position-absolute top-50 start-50 translate-middle" 
+                     src="img/shampoo.png" 
+                     alt="Shampoo" 
+                     style="max-width: 170px; z-index: 10;">
 
-                <!-- Center Image -->
-                <img src="img/shampoo.png"
-                     alt="Shampoo"
-                     class="glowing-image">
-
-                <!-- Circles -->
+                <!-- Benefit Circles -->
                 <div class="circle" style="--i:0;"><h5>Natural & Organic</h5></div>
                 <div class="circle" style="--i:1;"><h5>Anti Hair Fall</h5></div>
                 <div class="circle" style="--i:2;"><h5>Anti-dandruff</h5></div>
@@ -274,84 +276,90 @@
 </div>
 
 <style>
-:root {
-    --total-items: 6;
-    --item-size: 95px;        /* Bigger circles */
-    --container-size: 90vw;   /* Fully responsive */
-}
-
-body {
-    overflow-x: hidden;
-}
-
-.circle-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.circle-container {
-    width: min(420px, var(--container-size));
-    height: min(420px, var(--container-size));
-    position: relative;
-    margin: auto;
-}
-
-/* Radius calculated automatically so nothing gets cut */
-.circle-container {
-    --radius: calc(50% - var(--item-size) / 2 - 10px);
-}
-
-.glowing-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 38%;
-    z-index: 10;
-    box-shadow: 0 0 25px rgba(255,215,0,0.8),
-                0 0 50px rgba(255,215,0,0.4);
-}
-
-.circle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: var(--item-size);
-    height: var(--item-size);
-    background: #ffe880;
-    border: 4px solid #ffcc00;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    font-weight: bold;
-
-    transform:
-        rotate(calc(360deg / var(--total-items) * var(--i)))
-        translate(calc(var(--radius) - 10px)) /* Adjusted translate left by 10px */
-        rotate(calc(-360deg / var(--total-items) * var(--i)));
-}
-
-h5 {
-    margin: 0;
-    font-size: 0.75rem;
-    padding: 6px;
-}
-
-/* ===== MOBILE OPTIMIZATION ===== */
-@media (max-width: 576px) {
     :root {
-        --item-size: 80px;
+        --total-items: 6;
+        --radius: 170px;        /* Slightly increased */
+        --item-size: 100px;     /* Bigger circles */
+    }
+
+    body {
+        overflow-x: hidden;
+    }
+
+    .circle-wrapper {
+        min-height: 450px;
+    }
+
+    .circle-container {
+        width: 400px;
+        height: 400px;
+        position: relative;
+        margin: auto;
+    }
+
+    .glowing-image {
+        box-shadow: 0 0 25px rgba(255, 215, 0, 0.8),
+                    0 0 50px rgba(255, 215, 0, 0.4);
+    }
+
+    .circle {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: var(--item-size);
+        height: var(--item-size);
+        background: #ffe880;
+        border: 4px solid #ffcc00;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-weight: bold;
+        color: #fff;
+
+        transform:
+            rotate(calc(360deg / var(--total-items) * var(--i)))
+            translate(var(--radius))
+            rotate(calc(-360deg / var(--total-items) * var(--i)));
     }
 
     h5 {
-        font-size: 0.65rem;
+        margin: 0;
+        font-size: 0.8rem;
+        padding: 5px;
     }
-}
+
+    /* ================= MOBILE FIX ================= */
+    @media (max-width: 768px) {
+        :root {
+            --radius: 130px;
+            --item-size: 85px;  /* Slightly bigger but safe */
+        }
+
+        .circle-container {
+            
+            width: 400px;
+    height: 400px;
+    position: relative;
+    margin: auto;
+    transform: translateX(-20px); /* 👈 moves everything left */
+        }
+
+        .circle-wrapper {
+            min-height: 350px;
+        }
+
+        .glowing-image {
+            max-width: 130px !important;
+        }
+
+        h5 {
+            font-size: 0.65rem;
+        }
+    }
 </style>
+
    
 
    <!-- How To Use Start -->
@@ -765,6 +773,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
