--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     height: 400px;
     position: relative;
     margin: auto;
-    transform: translateX(-30px); /* 👈 moves everything left */
+    transform: translateX(-35px); /* 👈 moves everything left */
         }
 
         .circle-wrapper {
@@ -352,6 +352,10 @@
 
         .glowing-image {
             max-width: 130px !important;
+          
+    transform: translate(-40%, -50%) !important;
+}
+
         }
 
         h5 {
@@ -773,6 +777,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
