--- a/index.html
+++ b/index.html
@@ -256,18 +256,21 @@
         <div class="circle-wrapper d-flex justify-content-center align-items-center">
             <div class="circle-container position-relative">
                 
-                <!-- Central Image -->
-              <img src="main.jpg"
+                <img src="img/shampoo.png"
      alt="Shampoo"
-     class="img-fluid"
      style="
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        max-width: 170px;
-        z-index: 10;
+         position: absolute;
+         top: 50%;
+         left: 50%;
+         transform: translate(-50%, -50%);
+         max-width: 170px;
+         z-index: 10;
+         /* Glowing effect */
+         box-shadow: 
+             0 0 25px rgba(255, 215, 0, 0.8), 
+             0 0 50px rgba(255, 215, 0, 0.4);
      ">
+
 
 
                 <!-- Benefit Circles -->
@@ -785,6 +788,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
