--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="circle-wrapper d-flex justify-content-center align-items-center">
             <div class="circle-container position-relative">
                 
-                <img src="img/shampoo.png"
+                <img src="main.jpg"
      alt="Shampoo"
      style="
          position: absolute;
@@ -788,6 +788,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
