--- a/index.html
+++ b/index.html
@@ -256,20 +256,19 @@
         <div class="circle-wrapper d-flex justify-content-center align-items-center">
             <div class="circle-container position-relative">
                 
-                <img src="main.jpg"
+            <img src="main.jpg"
      alt="Shampoo"
      style="
          position: absolute;
          top: 50%;
          left: 50%;
-         transform: translate(-50%, -50%);
+         transform: translate(-40%, -40%);
          max-width: 170px;
          z-index: 10;
-         /* Glowing effect */
-         box-shadow: 
-             0 0 25px rgba(255, 215, 0, 0.8), 
-             0 0 50px rgba(255, 215, 0, 0.4);
+         box-shadow: 0 0 25px rgba(255, 215, 0, 0.8),
+                     0 0 50px rgba(255, 215, 0, 0.4);
      ">
+
 
 
 
@@ -788,6 +787,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
