--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 <div class="container-fluid py-5 overflow-hidden">
     <div class="container text-center">
         <h1 class="mb-4" style="color: #ffe880;">
-            <span class="fw-light text-dark">Best Benefits Of Our</span> Natural Hair Shampoo
+            <span class="fw-light text-dark">Best Selling Product</span>  24K Gold Skin Polish
         </h1>
 
         <!-- Circle Wrapper -->
@@ -273,12 +273,12 @@
 
 
                 <!-- Benefit Circles -->
-                <div class="circle" style="--i:0;"><h5>Natural & Organic</h5></div>
-                <div class="circle" style="--i:1;"><h5>Anti Hair Fall</h5></div>
-                <div class="circle" style="--i:2;"><h5>Anti-dandruff</h5></div>
-                <div class="circle" style="--i:3;"><h5>No Internal Side Effect</h5></div>
-                <div class="circle" style="--i:4;"><h5>No Skin Irritation</h5></div>
-                <div class="circle" style="--i:5;"><h5>No Artificial Smell</h5></div>
+                <div class="circle" style="--i:0;"><h5>Improves Skin Radiance</h5></div>
+                <div class="circle" style="--i:1;"><h5>Deep Exfoliation</h5></div>
+                <div class="circle" style="--i:2;"><h5>Removes Dullness & Tan</h5></div>
+                <div class="circle" style="--i:3;"><h5>Hydrates & Softens</h5></div>
+                <div class="circle" style="--i:4;"><h5>Evens Skin Tone</h5></div>
+                <div class="circle" style="--i:5;"><h5>Minimizes Pores</h5></div>
 
             </div>
         </div>
@@ -787,6 +787,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
