--- a/index.html
+++ b/index.html
@@ -74,8 +74,20 @@
     <!-- Logo Image -->
     <img src="logo.jpg" alt="Logo" style="height: 40px; width: auto; margin-right: 10px;"/>
 
-    <!-- Name -->
-    <h2 style="color: #ffca1a; margin: 0; font-weight: 900;">SAFA'Z</h2>
+    <h2 style="
+    color: #ffca1a;
+    margin: 0;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 900;
+    font-size: 3rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
+    font-style: italic;
+">
+    SAFA'Z
+</h2>
+
 
 </div>
 
@@ -787,6 +799,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
