--- a/index.html
+++ b/index.html
@@ -73,17 +73,18 @@
 
     <!-- Logo Image -->
     <img src="logo.jpg" alt="Logo" style="height: 40px; width: auto; margin-right: 10px;"/>
-
-    <h2 style="
-    color: #ffca1a;
+<h2 style="
+    font-family: 'Great Vibes', cursive;
+    font-weight: 700;
+    font-size: 4rem;
     margin: 0;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 900;
-    font-size: 3rem;
     letter-spacing: 2px;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.3);
-    font-style: italic;
+    color: #ffd700;
+    background: linear-gradient(45deg, #ffd700, #ffcc33);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.4), 0 0 12px rgba(255,215,0,0.6);
+    transform: rotate(-2deg) skewX(-3deg);
 ">
     SAFA'Z
 </h2>
@@ -799,6 +800,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
