--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     text-shadow: 2px 2px 8px rgba(0,0,0,0.4), 0 0 12px rgba(255,215,0,0.6);
     transform: rotate(-2deg) skewX(-3deg);
 ">
-    SAFA'Z
+    SAFA'z
 </h2>
 
 
@@ -800,6 +800,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
