--- a/index.html
+++ b/index.html
@@ -71,23 +71,21 @@
         ☰
     </div>
 
-    <!-- Logo Image -->
-    <img src="logo.jpg" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;"/>
-<h2 style="
+    <h2 style="
     font-family: 'Great Vibes', cursive;
-    font-weight: 700;
     font-size: 3rem;
     margin: 0;
-    letter-spacing: 2px;
-    color: #ffd700;
+    font-weight: 700;
+    color: #ffca1a;
     background: linear-gradient(45deg, #ffd700, #ffcc33);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.4), 0 0 12px rgba(255,215,0,0.6);
-    transform: rotate(-2deg) skewX(-3deg);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4), 0 0 10px rgba(255, 215, 0, 0.6);
+    letter-spacing: 1px;
 ">
-    SAFA'z
+    SAFA'Z
 </h2>
+
 
 
 </div>
@@ -800,6 +798,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
