--- a/index.html
+++ b/index.html
@@ -70,18 +70,19 @@
     <div onclick="openSidebar()" style="font-size: 30px; cursor: pointer; color: #ffca1a; font-weight: bold; margin-right: auto;">
         ☰
     </div>
-
-    <h2 style="
+<h2 style="
     font-family: 'Great Vibes', cursive;
-    font-size: 3rem;
+    font-size: 4rem;
     margin: 0;
-    font-weight: 700;
+    font-weight: 800;
     color: #ffca1a;
     background: linear-gradient(45deg, #ffd700, #ffcc33);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4), 0 0 10px rgba(255, 215, 0, 0.6);
-    letter-spacing: 1px;
+    text-shadow: 
+        3px 3px 10px rgba(0,0,0,0.5),   /* blended black shadow for depth */
+        0 0 15px rgba(255,215,0,0.7);    /* golden glow */
+    letter-spacing: 2px;
 ">
     SAFA'Z
 </h2>
@@ -798,6 +799,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
