--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <div onclick="openSidebar()" style="font-size: 30px; cursor: pointer; color: #ffca1a; font-weight: bold; margin-right: auto;">
         ☰
     </div>
+
+    <!-- Logo Image -->
+    <img src="logo.jpg" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;"/>
 <h2 style="
     font-family: 'Great Vibes', cursive;
     font-size: 4rem;
@@ -799,9 +802,6 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
-
-
-
 
 
 
