--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         0 0 15px rgba(255,215,0,0.7);    /* golden glow */
     letter-spacing: 2px;
 ">
-    SAFA'Z
+    SAFA'z
 </h2>
 
 
@@ -802,6 +802,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
