--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 
-        3px 3px 10px rgba(0,0,0,0.5),   /* blended black shadow for depth */
-        0 0 15px rgba(255,215,0,0.7);    /* golden glow */
+        3px 3px 10px rgba(0,0,0,0.5), 
+        0 0 15px rgba(255,215,0,0.7);
     letter-spacing: 2px;
 ">
-    SAFA'z
+    SAFA'<span style="vertical-align: middle; display: inline-block;">z</span>
 </h2>
 
 
@@ -802,6 +802,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
