--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 
-        3px 3px 10px rgba(0,0,0,0.5), 
+        3px 3px 10px rgba(0,0,0,0.5),
         0 0 15px rgba(255,215,0,0.7);
     letter-spacing: 2px;
 ">
-    SAFA'<span style="vertical-align: middle; display: inline-block;">z</span>
+    SAFA'<span style="font-size: 0.65em; vertical-align: middle;">Z</span>
 </h2>
+
 
 
 
@@ -802,6 +803,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
