--- a/index.html
+++ b/index.html
@@ -75,20 +75,19 @@
     <img src="logo.jpg" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;"/>
 <h2 style="
     font-family: 'Great Vibes', cursive;
-    font-size: 3rem;
+    font-size: 2rem;
     margin: 0;
-    font-weight: 800;
+    font-weight: 700;
     color: #ffca1a;
     background: linear-gradient(45deg, #ffd700, #ffcc33);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 
-        3px 3px 10px rgba(0,0,0,0.5),
-        0 0 15px rgba(255,215,0,0.7);
-    letter-spacing: 2px;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4), 0 0 10px rgba(255, 215, 0, 0.6);
+    letter-spacing: 1px;
 ">
     SAFA'<span style="font-size: 0.65em; vertical-align: middle;">Z</span>
 </h2>
+
 
 
 
@@ -803,6 +802,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
