--- a/index.html
+++ b/index.html
@@ -75,14 +75,16 @@
     <img src="logo.jpg" alt="Logo" style="height: 60px; width: auto; margin-right: 10px;"/>
 <h2 style="
     font-family: 'Great Vibes', cursive;
-    font-size: 2rem;
+    font-size: 3rem;
     margin: 0;
-    font-weight: 700;
+    font-weight: 800;  /* bold as you wanted */
     color: #ffca1a;
     background: linear-gradient(45deg, #ffd700, #ffcc33);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4), 0 0 10px rgba(255, 215, 0, 0.6);
+    text-shadow: 
+        2px 2px 8px rgba(0,0,0,0.4),
+        0 0 10px rgba(255,215,0,0.6);
     letter-spacing: 1px;
 ">
     SAFA'<span style="font-size: 0.65em; vertical-align: middle;">Z</span>
@@ -803,6 +805,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
